Update files, finish task 1,2,3

--- a/notebooks-course/03C_Backtesting ML Classification-Based.ipynb
+++ b/notebooks-course/03C_Backtesting ML Classification-Based.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "6413f2e3-656e-4847-be24-fc179bec23ac",
    "metadata": {},
    "outputs": [],
@@ -30,21 +30,205 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "a3f91d9e-1d90-4111-a92d-119a74f6ba7d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[*********************100%%**********************]  1 of 1 completed\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Open</th>\n",
+       "      <th>High</th>\n",
+       "      <th>Low</th>\n",
+       "      <th>Close</th>\n",
+       "      <th>Adj Close</th>\n",
+       "      <th>Volume</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2009-09-25</th>\n",
+       "      <td>16.990000</td>\n",
+       "      <td>16.990000</td>\n",
+       "      <td>16.990000</td>\n",
+       "      <td>16.990000</td>\n",
+       "      <td>16.990000</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2009-09-28</th>\n",
+       "      <td>16.990000</td>\n",
+       "      <td>16.990000</td>\n",
+       "      <td>16.990000</td>\n",
+       "      <td>16.990000</td>\n",
+       "      <td>16.990000</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2009-09-29</th>\n",
+       "      <td>16.990000</td>\n",
+       "      <td>16.990000</td>\n",
+       "      <td>16.990000</td>\n",
+       "      <td>16.990000</td>\n",
+       "      <td>16.990000</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2009-09-30</th>\n",
+       "      <td>16.990000</td>\n",
+       "      <td>16.990000</td>\n",
+       "      <td>16.990000</td>\n",
+       "      <td>16.990000</td>\n",
+       "      <td>16.990000</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2009-10-01</th>\n",
+       "      <td>16.990000</td>\n",
+       "      <td>16.990000</td>\n",
+       "      <td>16.990000</td>\n",
+       "      <td>16.990000</td>\n",
+       "      <td>16.990000</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-07-24</th>\n",
+       "      <td>94.735001</td>\n",
+       "      <td>95.105003</td>\n",
+       "      <td>93.930000</td>\n",
+       "      <td>94.050003</td>\n",
+       "      <td>94.050003</td>\n",
+       "      <td>155275</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-07-25</th>\n",
+       "      <td>93.525002</td>\n",
+       "      <td>93.709999</td>\n",
+       "      <td>92.750000</td>\n",
+       "      <td>93.559998</td>\n",
+       "      <td>93.559998</td>\n",
+       "      <td>209328</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-07-26</th>\n",
+       "      <td>93.345001</td>\n",
+       "      <td>93.919998</td>\n",
+       "      <td>93.250000</td>\n",
+       "      <td>93.745003</td>\n",
+       "      <td>93.745003</td>\n",
+       "      <td>96917</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-07-29</th>\n",
+       "      <td>94.375000</td>\n",
+       "      <td>94.785004</td>\n",
+       "      <td>93.919998</td>\n",
+       "      <td>93.919998</td>\n",
+       "      <td>93.919998</td>\n",
+       "      <td>115889</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-07-30</th>\n",
+       "      <td>94.264999</td>\n",
+       "      <td>94.699997</td>\n",
+       "      <td>93.889999</td>\n",
+       "      <td>93.995003</td>\n",
+       "      <td>93.995003</td>\n",
+       "      <td>113201</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>3801 rows × 6 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 Open       High        Low      Close  Adj Close  Volume\n",
+       "Date                                                                     \n",
+       "2009-09-25  16.990000  16.990000  16.990000  16.990000  16.990000       0\n",
+       "2009-09-28  16.990000  16.990000  16.990000  16.990000  16.990000       0\n",
+       "2009-09-29  16.990000  16.990000  16.990000  16.990000  16.990000       0\n",
+       "2009-09-30  16.990000  16.990000  16.990000  16.990000  16.990000       0\n",
+       "2009-10-01  16.990000  16.990000  16.990000  16.990000  16.990000       0\n",
+       "...               ...        ...        ...        ...        ...     ...\n",
+       "2024-07-24  94.735001  95.105003  93.930000  94.050003  94.050003  155275\n",
+       "2024-07-25  93.525002  93.709999  92.750000  93.559998  93.559998  209328\n",
+       "2024-07-26  93.345001  93.919998  93.250000  93.745003  93.745003   96917\n",
+       "2024-07-29  94.375000  94.785004  93.919998  93.919998  93.919998  115889\n",
+       "2024-07-30  94.264999  94.699997  93.889999  93.995003  93.995003  113201\n",
+       "\n",
+       "[3801 rows x 6 columns]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "yf."
+    "ticker = 'IWDA.AS'\n",
+    "yf.download(tickers=ticker)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "5389f805",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[*********************100%%**********************]  1 of 1 completed\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = yf.download(tickers=ticker)"
+   ]
   },
   {
    "attachments": {},
@@ -295,7 +479,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.10"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
